...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/registrateButton"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:backgroundTint="#9C27B0"
        android:text="Regístrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesionButton"
        app:layout_constraintVertical_bias="0.095"
        app:strokeColor="#FAFAFA" />
...
